maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: not found: value vir
    while(vir!=4){vir = placement()}
          ^Escaper:27: error: not found: value vir
    while(vir!=4){vir = placement()}
                  ^